# codemind

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  repos.py
backend/app/core/: config.py
backend/app/graph/: graph.py  state.py
backend/app/rag/: ingestion.py  parser.py  retriever.py
backend/app/vectordb/: schema.py
backend/scripts/: ingest.py  ingest_github.py  init_schema.py  smoke_test.py  test_parser.py  test_retrieval.py
backend/tests/: test_graph_state.py  test_repos_api.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/services/: api.ts
